# FridayAssistant

./: .gitignore  README.md
.github/disable_workflows/: friday-assistant.yml  friday-google-oauth.yml  friday-newsletter.yml
.github/workflows/: friday-assistant.yml  friday-google-oauth.yml  friday-newsletter.yml  main.yml
main/: Cargo.toml
main/src/: alexa_handler.rs  main.rs  server_api.rs
main/src/alexa_handler/: launch_request.rs
server/: cleanup-replicasets.sh  k8s-replicaset-cleaner-cronjob.yml
server/FridayMessageBroker/: .gitignore  FridayMessageBroker.sln  docker-compose.yml
server/dashboard/: README.md  dashboard-values.yml  dashboard.sh  (+3 more)
serverless/friday-google-oauth/: .env  .gitignore  Cargo.toml  package.json  tsconfig.json
serverless/friday-google-oauth/database/procs/: pr_ins_tb_oauth_tokens.sql  pr_upd_oauth_token.sql
serverless/friday-google-oauth/src/: api_response.rs  generate_oauth_url.rs  get_access_token.rs  index.ts  lambda_handler.rs  load_env.rs  main.rs  main.ts  oauth_controller.rs  oauth_provider.rs  oauth_tokens_data.rs  tokens_getter.rs
serverless/friday-google-oauth/src/contracts/: LambdaResponse.ts  RequestData.ts  Tokens.ts
serverless/friday-google-oauth/src/get_access_token/: get_access_token_request.rs
serverless/friday-google-oauth/src/lambda_handler/: lambda_oauth_request.rs  lambda_oauth_response.rs  lambda_request.rs  lambda_response.rs
serverless/friday-google-oauth/src/oauth_provider/: tests.rs
serverless/friday-google-oauth/src/tokens_getter/: get_oauth_tokens.rs  get_oauth_tokens_request.rs  oauth_tokens.rs  refresh_access_token_request.rs
serverless/friday-mcp-manager/: Cargo.toml  FridayMcpManager.Dockerfile  README.md  deploy.sh  port-forward.sh  repo-friday-mcp-manager.yml
serverless/friday-mcp-manager/k8s/: friday-mcp-manager-deployment.yml  friday-mcp-manager-service.yml
serverless/friday-mcp-manager/src/: business_response.rs  load_env.rs  main.rs  mcp_protocol.rs  server.rs
serverless/friday-mcp-manager/src/todo_mod/: mod.rs  task.rs  todo_controller.rs  todo_list.rs  todo_logic.rs
serverless/friday-newsletter/: .env  .env.prod  Cargo.toml  news.json  top-headlines.json
serverless/friday-newsletter/core_infra/: Cargo.toml
serverless/friday-newsletter/core_infra/src/: lib.rs  message_broker.rs
serverless/friday-newsletter/src/: chat_api.rs  lambda_handler.rs  linkedin_news_post.rs  load_env.rs  main.rs  message_broker.rs  message_broker_sagas_queue.rs  search_news.rs
serverless/friday-newsletter/src/chat_api/: chat_api_contracts.rs
serverless/friday-newsletter/src/lambda_handler/: lambda_request.rs  lambda_response.rs  responses.rs
serverless/friday-newsletter/src/linkedin_news_post/: chat_api.rs  generate_news_post_queue.rs  search_news.rs
serverless/friday-newsletter/src/message_broker/: generate_news_post_queue.rs  mod.rs  queue_request.rs  queue_response.rs  sagas_queue.rs
serverless/friday-newsletter/src/models/: business_response.rs  mod.rs
serverless/friday-newsletter/src/models/chat_api_dto/: chat_response.rs  mod.rs
serverless/friday-newsletter/src/models/message_broker_dto/: mod.rs  queue_response.rs
serverless/friday-newsletter/src/models/search_news_dto/: mod.rs  news_contracts.rs
serverless/friday-newsletter/src/search_news/: news_contracts.rs
serverless/friday-newsletter/src/utils/: load_env.rs  mod.rs
serverless/friday-oauth-manager/: .env  Cargo.toml  FridayOAuthManager.Dockerfile  deploy.sh  port-forward.sh  repo-friday-oauth-manager.yml
serverless/friday-oauth-manager/.github/instructions/: rust.instructions.md
serverless/friday-oauth-manager/database/procs/: fn_get_first_oauth_token_by_refresh_token.sql  fn_get_first_oauth_tokens_by_last_expiry_date.sql  pr_ins_oauth_tokens.sql  pr_upd_oauth_token.sql
serverless/friday-oauth-manager/database/table/: tb_oauth_providers.sql  tb_oauth_tokens.sql
serverless/friday-oauth-manager/k8s/: friday-oauth-manager-deployment.yml  friday-oauth-manager-service.yml
serverless/friday-oauth-manager/src/: load_env.rs  main.rs  oauth_provider.rs  oauth_tokens_logic.rs  openapi.rs  tokens_getter.rs
serverless/friday-oauth-manager/src/oauth_provider/: mod.rs  oauth_provider_api.rs  tests.rs
serverless/friday-oauth-manager/src/oauth_tokens_mod/: mod.rs  oauth_tokens.rs  oauth_tokens_data.rs  oauth_tokens_logic.rs
serverless/friday-oauth-manager/src/oauth_tokens_mod/oauth_tokens_controller/: mod.rs  oauth_tokens_controller.rs
serverless/friday-oauth-manager/src/secret_manager_mod/: mod.rs  secret.rs  secret_manager_api.rs  secret_manager_logic.rs  secret_response.rs
serverless/friday-oauth-manager/src/tokens_getter/: get_oauth_tokens_request.rs
serverless/friday-todo-manager/: .env  Cargo.toml  FridayTodoManager.Dockerfile  README.md  deploy.sh  port-forward.sh  repo-friday-todo-manager.yml
serverless/friday-todo-manager/.github/: rust-instructions.md 
serverless/friday-todo-manager/.github/instructions/: rust.instructions.md
serverless/friday-todo-manager/k8s/: friday-secret-manager-deployment.yml  friday-secret-manager-service.yml  friday-todo-manager-deployment.yml  friday-todo-manager-service.yml
serverless/friday-todo-manager/src/: business_response.rs  friday_redis_client.rs  load_env.rs  main.rs  openapi.rs
serverless/friday-todo-manager/src/microsoft_graph_mod/: lists_microsoft_graph_api.rs  microsoft_graph_api.rs  mod.rs  task_response.rs  tasks_microsoft_graph_api.rs  tasks_response.rs  todo_list_response.rs  todo_lists_response.rs
serverless/friday-todo-manager/src/oauth_mod/: mod.rs  oauth_api.rs  oauth_response.rs
serverless/friday-todo-manager/src/secret_manager_mod/: mod.rs  secret_manager_api.rs  secret_manager_logic.rs
serverless/friday-todo-manager/src/todo_list_mod/: mod.rs  todo_list_controller.rs  todo_list_logic.rs
serverless/friday-todo-manager/src/todo_mod/: microsoft_graph_client.rs  mod.rs  oauth_client.rs  task.rs  task_controller.rs  task_logic.rs  todo_controller.rs  todo_list.rs  todo_list_controller.rs  todo_list_logic.rs  todo_logic.rs
(+151 files in other folders)
