[package]
name = "friday-assistant"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
hyper = "0.14.24"
lambda_runtime = "0.7.3"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.93"
tokio = "1.25.0"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
