[package]
name = "friday-google-oauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
chrono-tz = "0.8.4"
dotenv = "0.15.0"
envy = "0.4.2"
lambda_http = "0.9.0"
oauth2 = "4.4.2"
once_cell = "1.19.0"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.193"
serde_json = "1.0"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "macros", "chrono", "uuid"] }
tokio = { version = "1.25.0", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
uuid = { version = "1.6.1", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]}

