[package]
name = "friday-newsletter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
envy = "0.4.2"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = "0.11.14"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
