[package]
name = "friday-todo-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
dashmap = "5.5.3"
dotenv = "0.15.0"
envy = "0.4.2"
once_cell = "1.19.0"
redis = { version = "0.25.3", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.193"
serde_json = "1.0"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "macros", "chrono", "uuid"] }
tokio = { version = "1.25.0", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
utoipa = { version = "4.2", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "7.1", features = ["actix-web"] }
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
